--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,10 +36,12 @@ dependencies:
   path_provider: ^2.1.2
   system_info_plus: ^0.0.5
   battery_plus: ^4.1.0
+  shared_preferences: ^2.2.2
 
   # The following adds the Cupertino Icons font to your application.
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
+  timelines_plus: ^1.0.6
 
 dev_dependencies:
   flutter_test:
