--- a/macos/Runner/Configs/AppInfo.xcconfig
+++ b/macos/Runner/Configs/AppInfo.xcconfig
@@ -8,7 +8,7 @@
 PRODUCT_NAME = boostify
 
 // The application's bundle identifier
-PRODUCT_BUNDLE_IDENTIFIER = com.example.boostify
+PRODUCT_BUNDLE_IDENTIFIER = com.atqs.boostify
 
 // The copyright displayed in application information
 PRODUCT_COPYRIGHT = Copyright © 2025 com.example. All rights reserved.
