--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^1.0.8
   timelines_plus: ^1.0.6
+  google_mobile_ads: ^5.3.1
+
 
 dev_dependencies:
   flutter_test:
