Load keystore properties for Android release signing
- Added method to load keystore properties from external file
- Prepared build configuration to support secure release signing
- Integrated keystore properties loading in Android build script

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,6 +4,11 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
+def keystorePropertiesFile = rootProject.file("keystore.properties")
+def keystoreProperties = new Properties()
+if (keystorePropertiesFile.exists()) {
+    keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
+}
 
 android {
     namespace = "com.atqs.boostify"
