Add app launcher icons for Android and iOS
- Integrated flutter_launcher_icons package
- Generated new launcher icons for Android and iOS platforms
- Updated Android and iOS app icon configurations
- Added new icon asset for app branding

--- a/android/app/build.gradle
+++ b/android/app/build.gradle
@@ -4,8 +4,8 @@ plugins {
     // The Flutter Gradle Plugin must be applied after the Android and Kotlin Gradle plugins.
     id "dev.flutter.flutter-gradle-plugin"
 }
-def keystorePropertiesFile = rootProject.file("keystore.properties")
 def keystoreProperties = new Properties()
+def keystorePropertiesFile = rootProject.file('key.properties')
 if (keystorePropertiesFile.exists()) {
     keystoreProperties.load(new FileInputStream(keystorePropertiesFile))
 }
@@ -35,7 +35,7 @@ android {
         versionName = flutter.versionName
     }
 
-signingConfigs {
+    signingConfigs {
         release {
             keyAlias = keystoreProperties['keyAlias']
             keyPassword = keystoreProperties['keyPassword']
