--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -43,6 +43,7 @@ dependencies:
   cupertino_icons: ^1.0.8
   timelines_plus: ^1.0.6
   google_mobile_ads: ^5.3.1
+  flutter_launcher_icons: ^0.14.3
 
 
 dev_dependencies:
