--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -70,6 +70,7 @@ flutter:
 
   assets:
     - assets/translations/
+    - assets/icon/splitscreen pictures.jpg  # Splash resmi için
 
   # To add assets to your application, add an assets section, like this:
   # assets:
